tests/inputs/invalid/types/bad_loops/bad_for.crbc
routine main () : integer is 
    for i in true .. false loop
        print(i);
    end

    for i in reverse 0 .. 3 loop
        print(i);
    end

    return 0;
end